 Changelog:
 ==========
 * (trunk) version 1.4
    - arrayprint will handle <includeonly>/<noinclude> correct in case its used in a template.
	- Internationalization in several languages added.
	- moved into mediawiki.org svn repository.
	@ToDo before release:
	- As in Variables 2.0, one store per Parser should be used.
	- ''#arraysearch'' should not expand both, 'yes' and 'no', just the one actual case.
	
	
 * January 24, 2011 version 1.3.2
    - New public class methods for creating and removing arrays. Good for use by other extensions.
    - VERSION constant added to ArrayExtension class 
 * July 20, 2010 version 1.3.1
	- Removed critical bug. Some kind of "Superglobal" Arrays on page imports and job queue jobs. Values were passed from one page to another page. 

 * July 5, 2010 version 1.3
	- update arrayunion and arraydiff, fixed heavy bug (gaps between array indexes doing some serious trouble in other arrayfunctions like arraysearch)
 	- array function ''#arraysearcharray'' added
	- '#arraysearch' code cleanup, search parameter is optional now, searching for empty elements is possible now
	- advanced check for regular expressions in '#arraysearch,' '#arraydefine' and '#arraysearcharray'
	  Pivate function isValidRegEx() added
	- '#arraymerge' bug fixed: Php message in case of non existant seccond array
	- now using preg_quote in arraydefine when using a non regular expression delimiter
	- some minor code changes and cleanup
 
 * January 23, 2010 version 1.2.4
    - update arraydefine, add more parameter for combining print with arraydefine

 * July 16, 2009 version 1.2.3
    - update arrayunique,  fixed bug (empty string should be eliminated in array after arrayunique)

 * July 16, 2009 version 1.2.2
    - update arrayunique,  fixed bug (zero mistakenly eliminated in array after arrayunique)
    - rename key=>arrayid, should not affect any existing users
    - rename validate_array_by_name to validate_array_by_arrayid